--- a/Assets/css/form.css
+++ b/Assets/css/form.css
@@ -46,3 +46,16 @@ header  {
     width: 410px;
     padding: 10px 0;
 }
+
+.circle {
+    display: flex;
+    height: 400px;
+    width: 400px;
+    border: 1px solid black;
+    border-radius: 100%;
+    justify-content: center;
+    align-items: center;
+    background: rgb(1,255,0);
+    background: linear-gradient(0deg, rgba(1,255,0,1) 0%, rgba(255,231,0,1) 100%);
+    font-size: 50px;
+}
