--- a/Assets/css/blog.css
+++ b/Assets/css/blog.css
@@ -20,7 +20,31 @@ header div {
     padding: 10px 30px;
 }
 
+#blog-posts {
+    display: block;
+}
 
+#blog-posts div {
+    border: 1px solid black;
+    border-radius: 10px;
+    margin-top: 5px;
+    padding-left: 10px;
+}
+
+
+
+#blog-posts div h3 {
+    border-bottom: 3px solid black;
+}
+
+#blog-posts div p {
+    padding-left: 20px;
+}
+
+#blog-posts div h4 {
+    padding-top: 5px;
+    border-top: 2px solid black;
+}
 
 
 
