--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -2,3 +2,28 @@
     margin: 10px;
     padding: 10px 30px;
 }
+
+.dark {
+    background-color: #363636;
+    color: #fff;
+}
+
+.light{
+    background-color: #fff;
+    color: black;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    height: 100px;
+    border-bottom: 5px double black;
+}
+
+header.light {
+    background-color: greenyellow;
+}
+
+header.dark {
+    background-color: rgb(57, 95, 0);
+}
